--- a/client/css/sidebar.css
+++ b/client/css/sidebar.css
@@ -59,7 +59,7 @@
     transition: all 0.5s;
 }
 
-.sidebar-left .siderbar-links a.selected {
+.sidebar-left .sidebar-links a.selected {
     background-color: #fff;
     color: rgba(0, 0, 0, 1);
     font-size: 12px;
